# inference

./: .env.example  .gitignore  README.md  moon.yml  pyproject.toml
.github/workflows/: ci.yml
src/fractionax_inference/: __init__.py  config.py  inference.py  llm.py  server.py
tests/: test_server.py
