[project]
name = "fractionax-inference"
version = "0.0.0"
description = "FractionAX model-inference service (FastAPI + Anthropic Claude)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.69",
  "openai>=1.50",  # MiniMax failover via its OpenAI-compatible API
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "pydantic>=2.11",
  "pydantic-settings>=2.7",
  "fractionax-core",
]

# fractionax-core is the shared Python domain library (libs/py-core in the
# meta-monorepo). Resolved by path, so develop this service from the meta-repo.
[tool.uv.sources]
fractionax-core = { path = "../../libs/py-core", editable = true }

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7", "mypy>=1.13", "httpx>=0.28"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fractionax_inference"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Not strict: the Anthropic SDK request/response types don't unify cleanly.
[tool.mypy]
python_version = "3.13"
files = ["src"]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
